Update portfolio section

--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@ _<!doctype html>
 </a>
 
             <div>
-              <h3>Reconciliation Toolkit</h3>
-              <p>Clean templates for bank/CC reconciliations with built-in checks for discrepancies.</p>
+              <h3>AR Automation Toolkit</h3>
+              <p>A custom AR automation system that generates live aging reports, sends automated follow-ups, updates payment status, and cuts manual work from hours to minutes.</p>
               <ul class="tags"><li>Excel</li><li>Accounting</li></ul>
             </div>
           </article>
